--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "plugins"]
-	path = plugins
-	url = git@github.com:arkhi/spip-plugins.git
+[submodule "copyrights"]
+	path = plugins/copyrights
+	url = git@github.com:arkhi/spip-copyrights.git
